# NetChat_C

./: CMakeLists.txt  README.md
client/include/: clientChat.h
client/src/: clientChat.cpp  main.cpp
clientQT/: clientChat.cpp  clientChat.h  clientChatt.pro  resourse.qrc  widget.cpp  widget.h  widget.ui
messageSerialize/include/: core.h  message.h
messageSerialize/src/: main.cpp  message.cpp
server/include/: serverChat.h
server/src/: main.cpp  serverChat.cpp
